--- a/index.css
+++ b/index.css
@@ -376,11 +376,46 @@ span{
     position: relative;
     z-index: 1;
 }
-.cursos{
+.courses{
+    background-color: var(--second-bg-color);
+}
+.courses-box{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    place-items: stretch;
+    gap: 3rem;
+    row-gap: 5rem;
+}
+.courses-card{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    gap:10rem;
-    background: var(--second-bg-color);
-    color: var(--text-color);
+    justify-content: center;
+    text-align: center;
+    background-color: var(--bg-color);
+    border: 2px solid var(--main-color);
+    border-radius: 3rem;
+    gap: 2rem;
+    padding: 5rem 2rem;
+    overflow: hidden;
+    cursor: pointer;
+    box-shadow: 0 0 5px var(--main-color);
+    transition: 0.3s ease;
+    height: 100%;     
+    width: 100%; 
+    box-sizing: border-box;
+}
+.courses-card:hover{
+    box-shadow: 0 0 25px var(--main-color),
+                0 0 50px var(--main-color);
+    transform: scale(1.02);
+}
+.courses-card h2{
+    font-size: 3rem;
+}
+.courses-card h3{
+    font-size: 2.5rem;
+}
+.courses-card p{
+    font-size: 1.8rem;
 }
